--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+schoolmedia (0.1-lliurex19) bionic; urgency=medium
+
+  * Backport from focal
+  
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 13 Jan 2023 10:37:15 +0100
+
 schoolmedia (0.1) focal; urgency=medium
 
   * Initial Release.
