Updated changelog. Initial release for Jammy

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+schoolmedia (0.11) jammy; urgency=medium
+
+  * Initial release for Jammy
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Fri, 01 Sep 2023 12:45:28 +0200
+
 schoolmedia (0.1) focal; urgency=medium
 
   * Initial Release.
